--- a/page_personal.html
+++ b/page_personal.html
@@ -11,6 +11,7 @@
       <div class="navbar-left">ThaiKiet | Information Technology</div>
       <nav class="navbar-right">
         <a href="./page_home.html" class="nav-item">HOME</a>
+        <h1> hiện tại file này chưa hoàn thiện </h1>
       </nav>
     </header>
   </body>
