--- a/page_personal.html
+++ b/page_personal.html
@@ -12,7 +12,7 @@
       <nav class="navbar-right">
         <a href="./page_home.html" class="nav-item">HOME</a>
         <h1> hiện tại file này chưa hoàn thiện </h1>
-        <h2> hiện tại đang biên dịch cho file này !</h2>
+        <h2> hiện tại đang biên dịch cho file này !, thay đổi file này thành các dạng khác nhau ! </h2>
       </nav>
     </header>
   </body>
