--- a/page_personal.html
+++ b/page_personal.html
@@ -13,6 +13,7 @@
         <a href="./page_home.html" class="nav-item">HOME</a>
         <h1>hiện tại file này chưa hoàn thiện</h1>
         <h2>hiện tại đang biên dịch cho file này !</h2>
+        <h3>trang cv sẽ đánh giá nhân cách của bạn ~~ !</h3>
       </nav>
     </header>
   </body>
