--- a/page_personal.html
+++ b/page_personal.html
@@ -11,10 +11,11 @@
       <div class="navbar-left">ThaiKiet | Information Technology</div>
       <nav class="navbar-right">
         <a href="./page_home.html" class="nav-item">HOME</a>
-        <h1>hiện tại file này chưa hoàn thiện</h1>
-        <h2>hiện tại đang biên dịch cho file này !</h2>
-        <h3>trang cv sẽ đánh giá nhân cách của bạn ~~ !</h3>
       </nav>
     </header>
+    <h1>hiện tại file này chưa hoàn thiện</h1>
+    <h2>hiện tại đang biên dịch cho file này !</h2>
+    <h3>trang cv sẽ đánh giá nhân cách của bạn ~~ !</h3>
+    <h4>dự án sắp hoàn thiện</h4>
   </body>
 </html>
