--- a/page_personal.html
+++ b/page_personal.html
@@ -17,6 +17,7 @@
     <h2>hiện tại đang biên dịch cho file này !</h2>
     <h3>trang cv sẽ đánh giá nhân cách của bạn ~~ !</h3>
     <h4>dự án sắp hoàn thiện</h4>
-    <h5> project to finished 3/6/2025 </h5>
+    <h5>project to finished 3/6/2025</h5>
+    <h5>hahaha</h5>
   </body>
 </html>
