--- a/page_personal.html
+++ b/page_personal.html
@@ -20,5 +20,6 @@
     <h5>project to finished 3/6/2025</h5>
     <h5>hahaha</h5>
     <h6>cảm ơn bạn đã ghé thăm trang cá nhân của mình</h6>
+    <h6>cảm ơn bạn đã ghé thăm ~~ !</h6>
   </body>
 </html>
