--- a/page_personal.html
+++ b/page_personal.html
@@ -21,5 +21,6 @@
     <h5>hahaha</h5>
     <h6>cảm ơn bạn đã ghé thăm trang cá nhân của mình</h6>
     <h6>cảm ơn bạn đã ghé thăm ~~ !</h6>
+    <h7>cảm ơn bạn đã ghé thăm trang cá nhân của mình</h7>
   </body>
 </html>
