add personal achiverments

--- a/page_cv.html
+++ b/page_cv.html
@@ -90,15 +90,10 @@
             <h3>CTY 24H.dev VIETNAM</h3>
             <p class="date">2018 - Present</p>
             <p>
-              Làm việc với vị trí là web development leader, tôi tham gia vào
-              hầu hết các dự án kinh của công ty trong vai trò phân tích cấu
-              trúc, đưa ra giải pháp, estimate thời gian cũng như xây dựng tính
-              năng cho các dự án. Thiết kế cơ sở dữ liệu và viết code chính cho
-              từng dự án, most Front end Developer. Công ty là một Web Dev
-              Fullstack có thể tự thực hiện và hoàn thành các dự án từ A-Z. từ
-              để đến kho. Từ các kinh nghiệm về công việc trước đây đã có được
-              như PHP, Js, CSS, Html, SQL, Linux, Photoshop, Hosting, wordpress,
-              Laravel, Joomla!, Node JS, Javascript... Tôi đều nắm vững chắc.
+              Làm việc ở vị trí là một lập trình viên web dev và dev Ops, tại
+              các công ty lớn như 24h.dev đã cho tôi nhiều kinh nghiệm có nhiều
+              cơ hội để phát triển bản thân nâng cao chất lượng của trong công
+              việc.
             </p>
           </div>
         </div>
