--- a/page_home.html
+++ b/page_home.html
@@ -42,7 +42,9 @@
 
         <div class="buttons-group">
           <a href="./page_cv.html" class="btn primary-btn">Curriculum Vitae</a>
-          <a href="./page_personal.html" class="btn primary-btn">Portfolio</a>
+          <a href="./page_achieverment.html" class="btn primary-btn">
+            personal achievements</a
+          >
           <button onclick="ErrorA()" class="btn primary-btn">
             DỰ ÁN CỘNG TÁC
           </button>
