--- a/page_achieverment.html
+++ b/page_achieverment.html
@@ -16,122 +16,132 @@
   </header>
 
   <body>
-    <div class="container">
-      <div
-        class="item"
-        data-link="https://vi.wikipedia.org/wiki/Th%C3%A0nh_ph%E1%BB%91_H%E1%BB%93_Ch%C3%AD_Minh"
-      >
-        <div class="image-wrapper">
-          <img
-            src="https://via.placeholder.com/100x100?text=Image1"
-            alt="Hình ảnh 1"
-          />
+    <div class="main-wrapper">
+      <div class="container">
+        <div
+          class="item"
+          data-link="https://vi.wikipedia.org/wiki/Th%C3%A0nh_ph%E1%BB%91_H%E1%BB%93_Ch%C3%AD_Minh"
+        >
+          <div class="image-wrapper">
+            <img
+              src="https://via.placeholder.com/100x100?text=Image1"
+              alt="Hình ảnh 1"
+            />
+          </div>
+          <div class="content">
+            <h2>Counx bodiiement</h2>
+            <p>
+              Lorem ipsum eodort ot temet, oessecciore Verdiaou oballory onu
+              dit, padi dem gorotterreekit eonotiomw Mdi aeioorobore lome
+              ootiool Aertorguroreit, onoremot telt. Vaeoreot eicropiahremelit
+              ooeoo oolooraog aut aooroorome vaoouun ptatioout.
+            </p>
+          </div>
         </div>
-        <div class="content">
-          <h2>Counx bodiiement</h2>
-          <p>
-            Lorem ipsum eodort ot temet, oessecciore Verdiaou oballory onu dit,
-            padi dem gorotterreekit eonotiomw Mdi aeioorobore lome ootiool
-            Aertorguroreit, onoremot telt. Vaeoreot eicropiahremelit ooeoo
-            oolooraog aut aooroorome vaoouun ptatioout.
-          </p>
+
+        <div
+          class="item"
+          data-link="https://vi.wikipedia.org/wiki/Huy_ch%C6%B0%C6%A1ng"
+        >
+          <div class="image-wrapper">
+            <img
+              src="https://via.placeholder.com/100x100?text=Image2"
+              alt="Hình ảnh 2"
+            />
+          </div>
+          <div class="content">
+            <h2>Acchievement</h2>
+            <p>
+              Lorem ipsum dolor ut iamet, oosseocaient neldmt alam ait, ooeahiom
+              donamoiheotbeensstor andihaong el otiluaing otemm imeeot
+              taoteotnedaonot tootioohemialolelor oheoplaimeninoen iehot
+              oenricaen.
+            </p>
+          </div>
+        </div>
+
+        <div
+          class="item"
+          data-link="https://vi.wikipedia.org/wiki/Th%C3%A0nh_t%E1%BB%B1u"
+        >
+          <div class="image-wrapper">
+            <img
+              src="https://via.placeholder.com/100x100?text=Image3"
+              alt="Hình ảnh 3"
+            />
+          </div>
+          <div class="content">
+            <h2>Pours, the Achievement</h2>
+            <p>
+              Lorem ipsum dolor ut iamet, oaeereamelaur neldntai diole bit,
+              oeaeahiom dolorumdiheotgeuesstor elditraong elii ootirraing ooramw
+              iteott lewopisteieniditi rroiiheoieiesttaialel oomiamenerietien
+              oikan oomeriam.
+            </p>
+          </div>
+        </div>
+
+        <div
+          class="item"
+          data-link="https://vi.wikipedia.org/wiki/Huy_ch%C6%B0%C6%A1ng_v%C3%A0_Th%C3%A0nh_t%E1%BB%B1u"
+        >
+          <div class="image-wrapper">
+            <img
+              src="https://via.placeholder.com/100x100?text=Image4"
+              alt="Hình ảnh 4"
+            />
+          </div>
+          <div class="content">
+            <h2>Philandkeve and ond Aehistent</h2>
+            <p>
+              Lorem ituurt dloieotuieot, oaaemsomoluie aehioeatolt alop ut
+              ooraiumt dotumalt oiheoreqester ekditreong et ei ootiluaing
+              ooteaii ituome oreediaeoienaot Auiaoneotot Teiaeiaw eiloreaeeitem
+              oloaroimreaen.
+            </p>
+          </div>
+        </div>
+
+        <div
+          class="item"
+          data-link="https://vi.wikipedia.org/wiki/%C4%90%E1%BB%93_ng_t%E1%BB%91t_nghi%E1%BB%87p"
+        >
+          <div class="image-wrapper">
+            <img
+              src="https://via.placeholder.com/100x100?text=Image5"
+              alt="Hình ảnh 5"
+            />
+          </div>
+          <div class="content">
+            <h2>Degreet Reggium</h2>
+          </div>
+        </div>
+
+        <div
+          class="item"
+          data-link="https://vi.wikipedia.org/wiki/Ch%C3%BA_th%C3%ADch"
+        >
+          <div class="image-wrapper">
+            <img
+              src="https://via.placeholder.com/100x100?text=Image6"
+              alt="Hình ảnh 6"
+            />
+          </div>
+          <div class="content">
+            <h2>But tuttisy edraesyemag</h2>
+          </div>
         </div>
       </div>
-
-      <div
-        class="item"
-        data-link="https://vi.wikipedia.org/wiki/Huy_ch%C6%B0%C6%A1ng"
-      >
-        <div class="image-wrapper">
-          <img
-            src="https://via.placeholder.com/100x100?text=Image2"
-            alt="Hình ảnh 2"
-          />
-        </div>
-        <div class="content">
-          <h2>Acchievement</h2>
-          <p>
-            Lorem ipsum dolor ut iamet, oosseocaient neldmt alam ait, ooeahiom
-            donamoiheotbeensstor andihaong el otiluaing otemm imeeot
-            taoteotnedaonot tootioohemialolelor oheoplaimeninoen iehot
-            oenricaen.
-          </p>
-        </div>
-      </div>
-
-      <div
-        class="item"
-        data-link="https://vi.wikipedia.org/wiki/Th%C3%A0nh_t%E1%BB%B1u"
-      >
-        <div class="image-wrapper">
-          <img
-            src="https://via.placeholder.com/100x100?text=Image3"
-            alt="Hình ảnh 3"
-          />
-        </div>
-        <div class="content">
-          <h2>Pours, the Achievement</h2>
-          <p>
-            Lorem ipsum dolor ut iamet, oaeereamelaur neldntai diole bit,
-            oeaeahiom dolorumdiheotgeuesstor elditraong elii ootirraing ooramw
-            iteott lewopisteieniditi rroiiheoieiesttaialel oomiamenerietien
-            oikan oomeriam.
-          </p>
-        </div>
-      </div>
-
-      <div
-        class="item"
-        data-link="https://vi.wikipedia.org/wiki/Huy_ch%C6%B0%C6%A1ng_v%C3%A0_Th%C3%A0nh_t%E1%BB%B1u"
-      >
-        <div class="image-wrapper">
-          <img
-            src="https://via.placeholder.com/100x100?text=Image4"
-            alt="Hình ảnh 4"
-          />
-        </div>
-        <div class="content">
-          <h2>Philandkeve and ond Aehistent</h2>
-          <p>
-            Lorem ituurt dloieotuieot, oaaemsomoluie aehioeatolt alop ut
-            ooraiumt dotumalt oiheoreqester ekditreong et ei ootiluaing ooteaii
-            ituome oreediaeoienaot Auiaoneotot Teiaeiaw eiloreaeeitem
-            oloaroimreaen.
-          </p>
-        </div>
-      </div>
-
-      <div
-        class="item"
-        data-link="https://vi.wikipedia.org/wiki/%C4%90%E1%BB%93_ng_t%E1%BB%91t_nghi%E1%BB%87p"
-      >
-        <div class="image-wrapper">
-          <img
-            src="https://via.placeholder.com/100x100?text=Image5"
-            alt="Hình ảnh 5"
-          />
-        </div>
-        <div class="content">
-          <h2>Degreet Reggium</h2>
-        </div>
-      </div>
-
-      <div
-        class="item"
-        data-link="https://vi.wikipedia.org/wiki/Ch%C3%BA_th%C3%ADch"
-      >
-        <div class="image-wrapper">
-          <img
-            src="https://via.placeholder.com/100x100?text=Image6"
-            alt="Hình ảnh 6"
-          />
-        </div>
-        <div class="content">
-          <h2>But tuttisy edraesyemag</h2>
-        </div>
+      <div class="sidebar">
+        <h3>Thông tin thêm</h3>
+        <p>Đây là phần sidebar màu xanh lá cây của bạn.</p>
+        <ul>
+          <li>Mục 1</li>
+          <li>Mục 2</li>
+          <li>Mục 3</li>
+        </ul>
       </div>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
