change content of achieverment

--- a/page_achieverment.html
+++ b/page_achieverment.html
@@ -23,18 +23,15 @@
           data-link="https://vi.wikipedia.org/wiki/Th%C3%A0nh_ph%E1%BB%91_H%E1%BB%93_Ch%C3%AD_Minh"
         >
           <div class="image-wrapper">
-            <img
-              src="https://via.placeholder.com/100x100?text=Image1"
-              alt="Hình ảnh 1"
-            />
+            <img src="./dev1.jpg" alt="Hình ảnh 1" />
           </div>
           <div class="content">
-            <h2>Counx bodiiement</h2>
+            <h2>Tham gia hoạt động văn hóa CNTT tại DUY TAN UNIVERSITY</h2>
             <p>
-              Lorem ipsum eodort ot temet, oessecciore Verdiaou oballory onu
-              dit, padi dem gorotterreekit eonotiomw Mdi aeioorobore lome
-              ootiool Aertorguroreit, onoremot telt. Vaeoreot eicropiahremelit
-              ooeoo oolooraog aut aooroorome vaoouun ptatioout.
+              Đã đóng góp công nghệ tại trường Đại học Khoa học máy tính, Đại
+              học Duy Tân. Tham gia câu lạc bộ GOOGLE DEVELOPER STUDENT CLUBS
+              (GDSC) của trường, nơi mà sinh viên có thể có cơ hội học nhiều
+              thêm kiến thức lập trình và nhiều công nghệ mới được
             </p>
           </div>
         </div>
@@ -44,18 +41,19 @@
           data-link="https://vi.wikipedia.org/wiki/Huy_ch%C6%B0%C6%A1ng"
         >
           <div class="image-wrapper">
-            <img
-              src="https://via.placeholder.com/100x100?text=Image2"
-              alt="Hình ảnh 2"
-            />
+            <img src="./achiverment_1.jpg" alt="Hình ảnh 2" />
           </div>
           <div class="content">
-            <h2>Acchievement</h2>
+            <h2>Đạt giải 3 cấp thành phố cuộc thi tin học trẻ</h2>
             <p>
-              Lorem ipsum dolor ut iamet, oosseocaient neldmt alam ait, ooeahiom
-              donamoiheotbeensstor andihaong el otiluaing otemm imeeot
-              taoteotnedaonot tootioohemialolelor oheoplaimeninoen iehot
-              oenricaen.
+              Với sự tham gia của các trường Đại học hàng đầu tại thành phố Đà
+              Nẵng, như Đại học Bách Khoa, Đại học Sư Phạm Kỹ Thuật, Đại học
+              Việt Hàn ... Cuộc thi cho sinh viên có cơ hội thể hiện khả năng
+              lập lập trình và sáng tạo thuật toán. Tôi đã giành được giải 3
+              trong cuộc thi với đề tài " Ứng dụng công nghệ trong sử dụng app
+              để tìm kiếm, lên lịch trình và quản lý du lịch cá nhân". Đây là
+              một thành tựu đáng tự hào và là động lực để tôi tiếp tục phát
+              triển kỹ năng lập trình của mình.
             </p>
           </div>
         </div>
