add ArkTravel app !

--- a/page_achieverment.html
+++ b/page_achieverment.html
@@ -48,12 +48,12 @@
             <p>
               Với sự tham gia của các trường Đại học hàng đầu tại thành phố Đà
               Nẵng, như Đại học Bách Khoa, Đại học Sư Phạm Kỹ Thuật, Đại học
-              Việt Hàn ... Cuộc thi cho sinh viên có cơ hội thể hiện khả năng
-              lập lập trình và sáng tạo thuật toán. Tôi đã giành được giải 3
-              trong cuộc thi với đề tài " Ứng dụng công nghệ trong sử dụng app
-              để tìm kiếm, lên lịch trình và quản lý du lịch cá nhân". Đây là
-              một thành tựu đáng tự hào và là động lực để tôi tiếp tục phát
-              triển kỹ năng lập trình của mình.
+              Việt Hàn, và các đại học miền Trung, Tây Nguyên ... Cuộc thi cho
+              sinh viên có cơ hội thể hiện khả năng lập lập trình và sáng tạo
+              thuật toán. Tôi đã giành được giải 3 trong cuộc thi với đề tài "
+              Ứng dụng công nghệ trong sử dụng app để tìm kiếm, lên lịch trình
+              và quản lý du lịch cá nhân". Đây là một thành tựu đáng tự hào và
+              là động lực để tôi tiếp tục phát triển kỹ năng lập trình của mình.
             </p>
           </div>
         </div>
@@ -63,18 +63,17 @@
           data-link="https://vi.wikipedia.org/wiki/Th%C3%A0nh_t%E1%BB%B1u"
         >
           <div class="image-wrapper">
-            <img
-              src="https://via.placeholder.com/100x100?text=Image3"
-              alt="Hình ảnh 3"
-            />
+            <img src="./Screenshot 2025-06-24 164716.jpg" alt="Hình ảnh 3" />
           </div>
           <div class="content">
-            <h2>Pours, the Achievement</h2>
+            <h2>Featured Projects</h2>
             <p>
-              Lorem ipsum dolor ut iamet, oaeereamelaur neldntai diole bit,
-              oeaeahiom dolorumdiheotgeuesstor elditraong elii ootirraing ooramw
-              iteott lewopisteieniditi rroiiheoieiesttaialel oomiamenerietien
-              oikan oomeriam.
+              Dự án " Ứng dụng công nghệ trong du lịch cá nhân " <br />
+              Mô tả dự án: <br />
+              Công cụ này sẽ giúp người đi du lịch tìm hiểu, quản lí, thông tin
+              mà mình sắp tới có đầy đủ mọi ngôn ngữ tích hợp vào sẽ giúp du
+              khách có thể dễ dàng sử dụng, Lên lịch trình, tìm kiếm địa điểm
+              cần đến và quản lí thời gian du lịch của mình một cách hiệu quả.
             </p>
           </div>
         </div>
@@ -84,19 +83,13 @@
           data-link="https://vi.wikipedia.org/wiki/Huy_ch%C6%B0%C6%A1ng_v%C3%A0_Th%C3%A0nh_t%E1%BB%B1u"
         >
           <div class="image-wrapper">
-            <img
-              src="https://via.placeholder.com/100x100?text=Image4"
-              alt="Hình ảnh 4"
-            />
+            <img src="./Screenshot 2025-06-24 164716.jpg" alt="Hình ảnh 4" />
           </div>
           <div class="content">
-            <h2>Philandkeve and ond Aehistent</h2>
-            <p>
-              Lorem ituurt dloieotuieot, oaaemsomoluie aehioeatolt alop ut
-              ooraiumt dotumalt oiheoreqester ekditreong et ei ootiluaing
-              ooteaii ituome oreediaeoienaot Auiaoneotot Teiaeiaw eiloreaeeitem
-              oloaroimreaen.
-            </p>
+            <h2>Project Link</h2>
+            <a href="./Arktreval.html">
+              click vào để chuyển tiếp qua trang web
+            </a>
           </div>
         </div>
 
