--- a/page_achieverment.html
+++ b/page_achieverment.html
@@ -23,7 +23,7 @@
           data-link="https://vi.wikipedia.org/wiki/Th%C3%A0nh_ph%E1%BB%91_H%E1%BB%93_Ch%C3%AD_Minh"
         >
           <div class="image-wrapper">
-            <img src="./dev1.jpg" alt="Hình ảnh 1" />
+            <img src="./pic/dev1.jpg" alt="Hình ảnh 1" />
           </div>
           <div class="content">
             <h2>Tham gia hoạt động văn hóa CNTT tại DUY TAN UNIVERSITY</h2>
@@ -35,13 +35,12 @@
             </p>
           </div>
         </div>
-
         <div
           class="item"
           data-link="https://vi.wikipedia.org/wiki/Huy_ch%C6%B0%C6%A1ng"
         >
           <div class="image-wrapper">
-            <img src="./achiverment_1.jpg" alt="Hình ảnh 2" />
+            <img src="./pic/achiverment_1.jpg" alt="Hình ảnh 2" />
           </div>
           <div class="content">
             <h2>Đạt giải 3 cấp thành phố cuộc thi tin học trẻ</h2>
@@ -63,7 +62,10 @@
           data-link="https://vi.wikipedia.org/wiki/Th%C3%A0nh_t%E1%BB%B1u"
         >
           <div class="image-wrapper">
-            <img src="./Screenshot 2025-06-24 164716.jpg" alt="Hình ảnh 3" />
+            <img
+              src="./pic/Screenshot 2025-06-24 164716.jpg"
+              alt="Hình ảnh 3"
+            />
           </div>
           <div class="content">
             <h2>Featured Projects</h2>
@@ -83,13 +85,16 @@
           data-link="https://vi.wikipedia.org/wiki/Huy_ch%C6%B0%C6%A1ng_v%C3%A0_Th%C3%A0nh_t%E1%BB%B1u"
         >
           <div class="image-wrapper">
-            <img src="./Screenshot 2025-06-24 164716.jpg" alt="Hình ảnh 4" />
+            <img
+              src="./pic/Screenshot 2025-06-24 164716.jpg"
+              alt="Hình ảnh 4"
+            />
           </div>
           <div class="content">
             <h2>Project Link</h2>
-            <a href="./Arktreval.html">
+            <a~ href="./Arktreval.html">
               click vào để chuyển tiếp qua trang web
-            </a>
+            </a~>
           </div>
         </div>
 
