--- a/page_home.html
+++ b/page_home.html
@@ -31,7 +31,7 @@
     <main class="hero-section">
       <div class="image-container">
         <img
-          src="./a5eb93aa-f824-43a8-b2f1-dc5d5d1ec738.jpg"
+          src=".//pic/a5eb93aa-f824-43a8-b2f1-dc5d5d1ec738.jpg"
           alt="Thai Kiet"
           class="profile-image"
         />
@@ -43,7 +43,7 @@
         <div class="buttons-group">
           <a href="./page_cv.html" class="btn primary-btn">Curriculum Vitae</a>
           <a href="./page_achieverment.html" class="btn primary-btn">
-            personal achievements</a
+            Personal Achievements</a
           >
           <button onclick="ErrorA()" class="btn primary-btn">
             DỰ ÁN CỘNG TÁC
