will be add arktravel

--- a/page_achieverment.html
+++ b/page_achieverment.html
@@ -92,9 +92,9 @@
           </div>
           <div class="content">
             <h2>Project Link</h2>
-            <a~ href="./Arktreval.html">
+            <a href="Arktreval.html">
               click vào để chuyển tiếp qua trang web
-            </a~>
+            </a>
           </div>
         </div>
 
@@ -103,39 +103,19 @@
           data-link="https://vi.wikipedia.org/wiki/%C4%90%E1%BB%93_ng_t%E1%BB%91t_nghi%E1%BB%87p"
         >
           <div class="image-wrapper">
-            <img
-              src="https://via.placeholder.com/100x100?text=Image5"
-              alt="Hình ảnh 5"
-            />
+            <img src="./pic/internship_company.jpg" alt="Hình ảnh 5" />
           </div>
           <div class="content">
-            <h2>Degreet Reggium</h2>
+            <h2>Internship Company</h2>
+            <p>
+              Tại công ty 24h.dev, tôi đã có cơ hội thực tập và làm việc trong
+              môi trường chuyên nghiệp. Tôi đã học hỏi nhiều kiến thức mà thậm
+              chí trên trường không được giảng dạy, từ việc phát triển ứng dụng
+              web... khi tham gia vào các dự án thực tế của công ty, tôi đã có
+              cơ hội áp dụng kiến thức đã học vào thực tế và cải thiện kỹ năng.
+            </p>
           </div>
         </div>
-
-        <div
-          class="item"
-          data-link="https://vi.wikipedia.org/wiki/Ch%C3%BA_th%C3%ADch"
-        >
-          <div class="image-wrapper">
-            <img
-              src="https://via.placeholder.com/100x100?text=Image6"
-              alt="Hình ảnh 6"
-            />
-          </div>
-          <div class="content">
-            <h2>But tuttisy edraesyemag</h2>
-          </div>
-        </div>
-      </div>
-      <div class="sidebar">
-        <h3>Thông tin thêm</h3>
-        <p>Đây là phần sidebar màu xanh lá cây của bạn.</p>
-        <ul>
-          <li>Mục 1</li>
-          <li>Mục 2</li>
-          <li>Mục 3</li>
-        </ul>
       </div>
     </div>
     <script src="script.js"></script>
