--- a/page_cv.html
+++ b/page_cv.html
@@ -73,7 +73,6 @@
             cách tốt nhất.
           </p>
           <div class="tags">
-            <span>PHP Developer</span>
             <span>Fullstack</span>
             <span>Web developer</span>
             <span>Wordpress</span>
@@ -104,11 +103,11 @@
           </div>
           <div class="education-item">
             <h3>GROWUPWORK UNIVERSITY</h3>
-            <p><span>WEB DEVELOPER LEADER</span></p>
+            <p><span>W3SCHOOL</span></p>
             <p><span>AMIMI ACADEMY</span></p>
-            <p><span>WEB DESIGN EXPERT KEE</span></p>
-            <p><span> DUY TÂN UNIVERSITY </span></p>
-            <p><span>Software Engineering Major</span></p>
+            <p><span>PROGRAMIZ.PRO</span></p>
+            <p><span> SCS of DUY TAN UNIVERSITY </span></p>
+            <p><span></span></p>
           </div>
           <div class="languages">
             <div class="language-item">
@@ -127,7 +126,7 @@
             <h2>WORK EXPIENCE</h2>
           </div>
           <div class="work-item">
-            <p class="date">Oct 2018 - Present</p>
+            <p class="date">Nov 2023 - Present</p>
             <h3>COMPANY: 24h.dev CO.,LTD</h3>
             <h4>POSITION: WEB DEVICE DEVELOPMENT</h4>
             <h4>POSITION: WEB DEVELOPER (PHP/LARAVEL)</h4>
