--- a/page_home.html
+++ b/page_home.html
@@ -14,11 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Playfair+Display:wght@700&display=swap"
       rel="stylesheet"
     />
-    <script>
+    <!-- <script>
       alert(
         "Chào mừng đến với CV của Vo Thai Kiet ! \npress OK to continue <3 "
       );
-    </script>
+    </script> -->
   </head>
   <body>
     <header class="navbar">
@@ -37,7 +37,7 @@
         />
       </div>
       <div class="content-container">
-        <h1>Bonjour<br />my name's Thai Kiet.</h1>
+        <h1>Hello<br />my name's Thai Kiet.</h1>
         <p>live Da Nang<br />IT engineer majoring in software engineering</p>
 
         <div class="buttons-group">
@@ -45,9 +45,7 @@
           <a href="./page_achieverment.html" class="btn primary-btn">
             Personal Achievements</a
           >
-          <button onclick="ErrorA()" class="btn primary-btn">
-            DỰ ÁN CỘNG TÁC
-          </button>
+          <a href="./Arktreval.html" class="btn primary-btn"> Arktreval App </a>
           <button onclick="ErrorA()" class="btn primary-btn">
             HỢP TÁC VỚI MÌNH
           </button>
