--- a/page_home.html
+++ b/page_home.html
@@ -45,7 +45,9 @@
           <a href="./page_achieverment.html" class="btn primary-btn">
             Personal Achievements</a
           >
-          <a href="./Arktreval.html" class="btn primary-btn"> Arktreval App </a>
+          <a href="./ark_app/page1.html" class="btn primary-btn">
+            Arktreval App
+          </a>
           <button onclick="ErrorA()" class="btn primary-btn">
             HỢP TÁC VỚI MÌNH
           </button>
