--- a/ark_app/page3.html
+++ b/ark_app/page3.html
@@ -37,7 +37,7 @@
     <h2>🏯 Tham Quan Bà Nà Hills</h2>
 
     <img
-      src="https://placehold.co/400x200"
+      src="../pic/pic_for_arktravel1.jpg"
       alt="Bà Nà Hills"
       style="width: 100%; border-radius: 8px"
     />
