fix result complete => create schedule

--- a/ark_app/page1.html
+++ b/ark_app/page1.html
@@ -82,8 +82,12 @@
         <option value="luxury">Cao cấp</option>
       </select>
 
-      <button onclick="HandleSubmit()" class="btn">🚀 Tạo lịch trình</button>
+      <button type="button" onclick="HandleSubmit()" class="btn">
+        🚀 Tạo lịch trình
+      </button>
       <div id="output" style="margin-top: 20px; font-weight: bold"></div>
+      <button type="button" in></button>
+      <!-- ngày mai fix chỗ này sao cho đã ra result thì bấm ra tạo được lịch trình  -->
       <script src="page1.js"></script>
     </form>
   </body>
